Warning when too many nodes!

--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1273,7 +1273,8 @@ input[type="file"] {
     bottom: 10px;
     position: absolute;
     z-index: 100;
-    width: 300px;
+    min-width: 300px;
+    max-width: 60%;
 }
 
 
