--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -244,7 +244,7 @@
 
 
                 <img class="app-icon-inside" id="cyt-explorer-icon" src="{% static 'Images/network-icon.png' %}"/>
-                <h2>Net Explorer</h2>
+                <h2 id="netexplorer-title">Net Explorer</h2>
                 <a href="{% url index_view %}">Back to PlanNET</a>
 
 
