Added pagination to Pathway Finder

--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1756,3 +1756,14 @@ kbd {
 .form-div {
     width: 30%;
 }
+
+
+/* PAGINATION */
+.example .pagination>li>a,
+.example .pagination>li>span {
+  border: 1px solid #f0ad4e;
+}
+.pagination>li.active>a {
+  background: #f0ad4e;
+  color: #fff;
+}
