Github and twitter.

--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -77,8 +77,8 @@
 				<a href="https://www.facebook.com/Computational-Genomics-Lab-at-Genetics-Dep-UB-267633036589772/" target="_blank">
                     <img src="{% static 'Images/facebook.png' %}" class="social-icon"/>
                 </a>
-				<a href="#" target="_blank"><img src="{% static 'Images/twitter.png' %}" class="social-icon"></></a>
-				<a href="https://compgen.bio.ub.edu/gitlab/" target="_blank"><img src="{% static 'Images/gitlab.png' %}" class="social-icon"></></a>
+				<a href="https://twitter.com/CompGenLabUB" target="_blank"><img src="{% static 'Images/twitter.png' %}" class="social-icon"></></a>
+				<a href="https://github.com/scastlara/PlanNET" target="_blank"><img src="{% static 'Images/github_logo.png' %}" class="social-icon"></></a>
 
 			</div>
 
