--- a/NetExplorer/templates/NetExplorer/downloads.html
+++ b/NetExplorer/templates/NetExplorer/downloads.html
@@ -7,7 +7,12 @@
 
 {% block content %}
     <h2>Software</h2>
-    <p>Download the software to predict the protein-protein interactions <a target="_blank" href="https://github.com/scastlara/PlanNET">here</a> (Not available yet).</p>
+    <p>Download the software to predict the protein-protein interactions <a target="_blank" href="https://github.com/scastlara/PlanNET-software">here</a></p>
+    <br>
+    <hr>
+    <br>
+    <h2>Website code</h2>
+    <p>The source code of the PlanNET web application is available at <a target="_blank" href="https://github.com/scastlara/PlanNET">https://github.com/scastlara/PlanNET</a></p>
     <br>
     <hr>
     <br>
