Changed download links
Conflicts:
	NetExplorer/templates/NetExplorer/downloads.html

--- a/NetExplorer/templates/NetExplorer/downloads.html
+++ b/NetExplorer/templates/NetExplorer/downloads.html
@@ -7,20 +7,16 @@
 
 {% block content %}
     <h2>Software</h2>
-    <p>Download the software to predict the protein-protein interactions <a href="https://compgen.bio.ub.edu/dl2645">here</a>.</p>
+    <p>Download the software to predict the protein-protein interactions <a target="_blank" href="https://github.com/scastlara/PlanNET-software">here</a></p>
     <br>
     <hr>
     <br>
-    <h2>Reference interactome</h2>
-    <p>Download the Human reference ppi network here. Merge all the files in a single gz file and copy it to the <i>data/</i> directory of the PlanNET-software package.</p>
-    <ul>
-        <li><a href="">Part 1</a></li>
-        <li><a href="">Part 2</a></li>
-        <li><a href="">Part 3</a></li>
-        <li><a href="">Part 4</a></li>
-    </ul>
+    <h2>Website code</h2>
+    <p>The source code of the PlanNET web application is available at <a target="_blank" href="https://github.com/scastlara/PlanNET">https://github.com/scastlara/PlanNET</a></p>
+    <br>
+    <hr>
+    <br>
 {% endblock content %}
-
 
 
 {% block scripts %}
