--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1768,3 +1768,49 @@ kbd {
   background: #f0ad4e;
   color: #fff;
 }
+
+
+/* CELLNET */
+.cn-content {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+.cn-graph {
+  height: 100%;
+}
+
+.cn-controls {
+  height: 100%;
+  padding: 5%;
+}
+
+.cn-experiment {
+    width: 90%;
+}
+
+.cn-experiment-dropdown {
+  width: 90%;
+}
+
+.cn-exp-controls {
+  display: none;
+}
+
+.cn-celltype-select {
+  margin-top: 10%;
+}
+
+.cn-celltype {
+  width: 90%;
+}
+.cn-celltype-select .dropdown-menu {
+  width: 90%;
+}
+
+
+.cn-network-btn {
+  width: 45%;
+  padding: 10px;
+}
