Logo to cellnet page. Font color

--- a/Cellnet/templates/Cellnet/cellnet.html
+++ b/Cellnet/templates/Cellnet/cellnet.html
@@ -19,7 +19,17 @@
         <div class="col-sm-9 cn-graph"></div>
         <div class="col-sm-3 cn-controls">
           <!-- CONTROLS -->
-
+          <div class="cnet-controls-header">
+            <div class="back-div">
+                <a href="{% url index_view %}" class="info-tooltip"
+                title="Back to PlanNET"><span class="glyphicon glyphicon-home"></span></a>
+                <hr>
+                <a target="_blank" href="{% url tutorial %}#cellnet" class="info-tooltip"
+                title="Go to Tutorial"><span class="glyphicon glyphicon-question-sign"></span></a>
+            </div>
+            <img class="app-icon-inside" id="cyt-netexplorer-icon" src="{% static 'Images/cellnet-icon.png' %}"/>
+            <div class="app-title"><h2 id="netexplorer-title">CellNet</h2></div>
+          </div>
           <!-- NETWORK -->
           <h3>Network</h3>
           <div class="btn btn-default cn-network-btn">
@@ -79,7 +89,18 @@
     <script src="{% static 'js/jquery-min.js' %}"></script>
     <script src="{% static 'js/cytoscape.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-all.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-slider.js' %}"></script>
     <script src="{% static 'js/cellnet.js' %}"></script>
+    <script>
+        $( function() {
+            $( ".info-tooltip" ).tooltip({
+                track: true,
+                content: function(){
+                    return $(this).attr("title");
+                }
+            });
+        } );
+    </script>
   </body>
 </html>
