--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -17,7 +17,7 @@
         -->
 
         <div class="row row-app">
-            <div class="col-sm-6">
+            <div class="col-sm-6 rowcol">
                 <div class="panel panel-info app-container" >
                     <div class="panel-heading">
                         Gene Search
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-6 rowcol">
 
                 <div class="panel panel-blast app-container" >
                     <div class="panel-heading">
@@ -54,7 +54,7 @@
         </div>
 
         <div class="row row-app">
-            <div class="col-sm-6">
+            <div class="col-sm-6 rowcol">
 
                 <div class="panel panel-success app-container" >
                     <div class="panel-heading">
@@ -73,7 +73,7 @@
 
 
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 rowcol">
 
                 <div class="panel panel-warning app-container" >
                     <div class="panel-heading">
@@ -92,7 +92,30 @@
 
 
             </div>
-        </div>
+          </div>
+            <div class="row row-app">
+              <div class="col-sm-3"> </div>
+              <div class="col-sm-6 rowcol">
+
+                  <div class="panel panel-cellnet app-container" >
+                      <div class="panel-heading">
+                          CellNet
+                          <a href="{% url tutorial %}#cellnet" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                              <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                          </a>
+                      </div>
+
+                      <div class="panel-body app-panel">
+                          <img class="app-icon" src="{% static 'Images/cellnet-icon.png' %}"/>
+                          <a class="btn app-button btn-cellnet" href="{% url cellnet %}">Cell it</a>
+                          <p>Look for pathways in the different interaction networks.</p>
+                      </div>
+                  </div>
+
+
+              </div>
+              <div class="col-sm-3"> </div>
+            </div>
 
 
 <!--
