--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -46,7 +46,7 @@
                                     <li><a href="{% url blast %}">Blast</a></li>
                                     <li><a href="{% url net_explorer %}">Net Explorer</a></li>
                                     <li><a href="{% url path_finder %}">Pathway Finder</a></li>
-                                    <li><a href="{% url cellnet %}">CellNet</a></li>
+                                    <li><a href="{% url netcell %}">NetCell</a></li>
                                 </ul>
                             </li>
                             <li id="navbar-datasets"><a href="{% url datasets %}">Datasets</a></li>
