--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -97,17 +97,17 @@
               <div class="col-sm-3"> </div>
               <div class="col-sm-6 rowcol">
 
-                  <div class="panel panel-cellnet app-container" >
+                  <div class="panel panel-netcell app-container" >
                       <div class="panel-heading">
                           CellNet
-                          <a href="{% url tutorial %}#cellnet" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                          <a href="{% url tutorial %}#netcell" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                               <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                           </a>
                       </div>
 
                       <div class="panel-body app-panel">
-                          <img class="app-icon" src="{% static 'Images/cellnet-icon.png' %}"/>
-                          <a class="btn app-button btn-cellnet" href="{% url cellnet %}">Cell it</a>
+                          <img class="app-icon" src="{% static 'Images/netcell-icon.png' %}"/>
+                          <a class="btn app-button btn-netcell" href="{% url netcell %}">Cell it</a>
                           <p>Look for pathways in the different interaction networks.</p>
                       </div>
                   </div>
