Netcell name missing

--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -99,7 +99,7 @@
 
                   <div class="panel panel-netcell app-container" >
                       <div class="panel-heading">
-                          CellNet
+                          NetCell
                           <a href="{% url tutorial %}#netcell" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                               <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                           </a>
@@ -108,7 +108,7 @@
                       <div class="panel-body app-panel">
                           <img class="app-icon" src="{% static 'Images/netcell-icon.png' %}"/>
                           <a class="btn app-button btn-netcell" href="{% url netcell %}">Cell it</a>
-                          <p>Look for pathways in the different interaction networks.</p>
+                          <p>Visualize Single-Cell expression experiments on pathways.</p>
                       </div>
                   </div>
 
