New about section

--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -17,6 +17,15 @@
         PlanNET has been developed by the <a href="https://compgen.bio.ub.edu" target="_blank">Computational Genomics Lab</a>, at the University of Barcelona.
     </p>
 
+    <h3>Citing PlanNET</h3>
+
+    <blockquote>
+      <p>
+        S Castillo-Lara, J F Abril
+        <b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes
+        Bioinformatics, AOP Dec. 10th, 2017, <a href="https://doi.org/10.1093/bioinformatics/btx738">btx738</a>
+      </p>
+    </blockquote>
 
 {% endblock content %}
 
