--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -21,9 +21,9 @@
 
     <blockquote>
       <p>
-        S Castillo-Lara, J F Abril
-        <b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes
-        Bioinformatics, AOP Dec. 10th, 2017, <a href="https://doi.org/10.1093/bioinformatics/btx738">btx738</a>
+        S Castillo-Lara, J F Abril<br />
+        <b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes<br />
+        Bioinformatics, AOP Dec. 10th, 2017, <a href="https://doi.org/10.1093/bioinformatics/btx738">btx738</a><br />
       </p>
     </blockquote>
 
