Skeleton of upload-graph

--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -925,7 +925,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-input[type="file"] {
+#controls-container input[type="file"] {
   display: block;
   width: 66px;
   height: 25px;
