Upload JSON and TBL working.

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -16,7 +16,7 @@
     <div class="cn-content">
 
       <div class="row">
-        <div class="col-sm-9 cn-graph"></div>
+        <div id="cyt" class="col-sm-9 cn-graph"></div>
         <div class="col-sm-3 cn-controls">
           <!-- CONTROLS -->
           <div class="cnet-controls-header">
@@ -137,6 +137,7 @@
 
     <script src="{% static 'js/jquery-min.js' %}"></script>
     <script src="{% static 'js/cytoscape.js' %}"></script>
+    <script src="{% static 'js/netcell-cytoscape-definition.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui-all.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-slider.js' %}"></script>
