Error dialog to netcell

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -130,6 +130,12 @@
         </div>
       </div>
 
+      <div id="dialog-error" title="Error">
+          <p>
+              <span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
+              <span id="error-content"> </span>
+          </p>
+      </div>
     </div>
 
 
