--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -9,6 +9,9 @@
       <link rel="stylesheet" href="{% static 'css/jquery-ui.structure-all.min.css' %}">
       <link rel="stylesheet" href="{% static 'css/jquery-ui-all.theme.min.css' %}">
       <title>PlanNET - NetCell</title>
+      <script>
+        var csrf_token = '{{ csrf_token }}';
+      </script>
   </head>
 
   <body>
@@ -156,6 +159,8 @@
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-cellexp" name="files[]" style="display:none;"/>
             </label>
+            <span id="files-cellexp-ok" class="glyphicon glyphicon-ok"></span>
+            <span id="files-cellexp-notok" class="glyphicon glyphicon-remove"></span>
           </div>
           <div class="col-sm-6">
             <h4>Cell Clustering</h4>
@@ -163,6 +168,8 @@
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-cellclust" name="files[]" style="display:none;"/>
             </label>
+            <span id="files-cellclust-ok" class="glyphicon glyphicon-ok"></span>
+            <span id="files-cellclust-notok" class="glyphicon glyphicon-remove"></span>
           </div>
         </div>
         <br><hr><br>
@@ -173,10 +180,19 @@
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-sce" name="files[]" style="display:none;"/>
             </label>
+            <span id="files-sce-ok" class="glyphicon glyphicon-ok"></span>
+            <span id="files-sce-notok" class="glyphicon glyphicon-remove"></span>
           </div>
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-sm-10">
+        </div>
+        <div class="col-sm-2 uploadexperiment-send-div">
+          <div id="uploadexperiment-send" class="btn btn-success disabled">Send</div>
+        </div>
+      </div>
 
     </div>
 
@@ -198,6 +214,8 @@
     <script src="{% static 'js/bootstrap-slider.js' %}"></script>
     <script src="{% static 'js/netcell.js' %}"></script>
     <script src="{% static 'js/card-overlay.js' %}"></script>
+    <script src="{% static 'js/plotly-latest.min.js' %}"></script>
+    <script src="{% static 'js/tsne.js' %}"></script>
     <script>
         $( function() {
             $( ".info-tooltip" ).tooltip({
