--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -367,7 +367,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .close-overlay {
-    display: inline-block;
+    display: none;
     font-size:16px;
     font-weight: bold;
     padding:20px;
@@ -1902,4 +1902,8 @@ kbd {
 #files-sce-ok {
   display: none;
   color: green;
+}
+
+#uploadexperiment-send {
+  width: 100px;
 }
