--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -253,6 +253,10 @@
         </div>
 
       </div>
+      <br><hr>
+      <div class="tsne-plot-container">
+        <div id="tsne-plot"></div>
+      </div>
 
     </div>
 
