First "working" version of upload RDS

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -184,7 +184,7 @@
         </div>
         <br><hr><br>
         <div class="row">
-          <h3>SCE Object (RData)</h3>
+          <h3>SCE Object (RDS)</h3>
           <div class="col-sm-6">
             <label class="btn btn-default">
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
