--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -1,5 +1,6 @@
 <html>
     <meta charset="utf-8">
+    <meta name="description" content="Schmidtea mediterranea protein-protein interaction networks.">
     {% load staticfiles %}
 
     <head>
