Color by Multiple conditions

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -247,6 +247,18 @@
                 data-slider-step="1"
             >
           </div>
+
+          <h3>Color by:</h3>
+          <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
+              Color by:
+              <span class="caret"></span>
+            </button>
+            <ul id="cn-colorby-dropdown" class="dropdown-menu cn-colorby-dropdown">
+              <!-- This will be filled by Query -->
+              
+            </ul>
+          </div> <!-- dropdown -->
         </div>
         <div class="col-sm-6 plot-btn-container">
           <div id="plot-btn" class="btn btn-netcell">Plot</div>
