tsne viz of up to 3 conditions

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -192,6 +192,13 @@
             </label>
             <span id="files-sce-ok" class="glyphicon glyphicon-ok"></span>
             <span id="files-sce-notok" class="glyphicon glyphicon-remove"></span>
+
+          </div>
+          <div class="col-sm-6">
+            <h5>ColData conditions names</h5>
+            <input type="text" placeholder="clusters" class="form-control" id="cluster-name">
+            <input type="text" placeholder="cond1" class="form-control" id="cond1-name">
+            <input type="text" placeholder="cond2" class="form-control" id="cond2-name">
           </div>
         </div>
       </div>
@@ -256,7 +263,7 @@
             </button>
             <ul id="cn-colorby-dropdown" class="dropdown-menu cn-colorby-dropdown">
               <!-- This will be filled by Query -->
-              
+
             </ul>
           </div> <!-- dropdown -->
         </div>
